<resources>
    <string name="app_name">Sangyan</string>
    <string name="image">image</string>
    <string name="sms_sent">Sms sent</string>
    <string name="welcome">Welcome</string>
    <string name="check_today_s_update">check today\'s update</string>
    <string name="pending_r_m">Pending Call</string>
    <string name="not_received">Pending Return</string>
    <string name="analytics">Analytics</string>
    <string name="police_station">Police station -</string>
    <string name="name_of_dist">District -</string>
    <string name="rm_date">RM Date -</string>
    <string name="search_here">Search</string>
    <string name="search_num">Search by number</string>
    <string name="send">Send</string>
    <string name="select_all">Select all</string>
    <string name="add__">Add</string>
    <string name="dash">-</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="case_no">Case No. -</string>
    <string name="case_type">Case Type -</string>
    <string name="name">Name -</string>
    <string name="crime_no">Crime No. -</string>
    <string name="receiving_date">Received -</string>
    <string name="showing_similar_kind_of_case_files">Showing similar kind of case files.</string>

    <string name="edt_title_email">Phone no.</string>//
    <string name="edt_hint_email">Enter your Govt number</string>
    <string name="chhattisgarh_police">SANGYAN</string>
    <string name="send_otp">Send OTP</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="phone_sms">Phone SMS</string>
    <string name="sirgitti_police_station">Sirgitti Police Station</string>
    <string name="days_left">5d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="sampleText">By providing my phone number. I hereby agree and accept the <![CDATA[<a href="https://pages.flycricket.io/high-court-alert/terms.html">Terms of Service</a>]]> and <![CDATA[<a href="https://pages.flycricket.io/high-court-alert/privacy.html">Privacy Policy</a>]]> .</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav">nav</string>
    <string name="welcome_to_high_court_alert">Welcome to SANGYAN</string>
    <string name="next">Next</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="proceed">Proceed</string>
    <string name="skip">Skip</string>
    <string name="user">User</string>
    <string name="om_yadav">Om Yadav</string>
    <string name="nikhil_verma">Nikhil Verma</string>
    <string name="android_developer">Android Developer</string>
    <string name="about_developers">About Developers</string>
    <string name="form">Data Form</string>
    <string name="district_name">District name</string>
    <string name="district">District</string>
    <string name="police_station_">Name</string>
    <string name="police_station_name">Police Station name</string>
    <string name="crime_number">Crime Number</string>
    <string name="crime_no_">Crime No.</string>
    <string name="crime_year">Crime Year</string>
    <string name="year_of_crime">Year of crime</string>
    <string name="case_type_">Case Type</string>
    <string name="case_no_">Case No.</string>
    <string name="case_year">Case Year</string>
    <string name="year_of_case">Year of case</string>
    <string name="criminal_name">Criminal Name</string>
    <string name="criminal_name_">Criminal name</string>
    <string name="rm_date_">RM Date</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="before_date">Before Date</string>
    <string name="diary_receiving_date">Diary Receiving Date</string>
    <string name="rm_call">RM Call</string>
    <string name="rm_return">RM Return</string>
    <string name="submit">Submit</string>
    <string name="download">Download</string>
    <string name="view">View</string>
    <string name="last_date">Last Date -</string>
    <string name="didn_t_you_receive_any_code">Didn\'t you receive any code?</string>
    <string name="resend_new_code">RESEND NEW CODE</string>
    <string name="m_b_sai_aditya">M.B.Sai Aditya</string>
    <string name="web_developer">Web Developer</string>
    <string name="control_panel">Control Panel</string>
    <string name="add_an_admin">Add an Admin</string>
    <string name="add_station_number">Add Station</string>
    <string name="enter_number">Enter admin number</string>
    <string name="enter_number_">Enter number</string>
    <string name="number">Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="no_data">No Data</string>
    <string name="add_number">Add Number</string>
    <string name="number_">Mob. no. -</string>

    <string name="number_data">Number Data</string>
    <string name="select_district">Select District (चयनित जिला)</string>
    <string name="select_stations">Select Stations (चयनित थाना)</string>
    <string name="are_you_sure_to_delete_this_number_permanently">Are you sure to delete this number permanently?</string>
    <string name="cases_against_police">Cases Against Police</string>
    <string name="date_of_filing">Date Of Filing</string>
    <string name="create_a_new_task">Task</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="nature_of_the_case">Nature of the case</string>
    <string name="appellant">Appellant</string>
    <string name="respondents">Respondents</string>
    <string name="task">Task</string>
    <string name="add_task">Add task</string>
    <string name="adapter_dp_transition">adapter dp transition</string>
    <string name="add_respondent">Add respondent</string>
    <string name="date_of_reply">Date of reply</string>
    <string name="date_of_submission_of_reply">Date of submission of reply</string>
    <string name="phone_number_of_oic">Phone number of OIC</string>
    <string name="oic_of_the_case">OIC of the case</string>
    <string name="legal_section_2">Legal Section 2</string>
    <string name="legal_section_1">Legal Section 1</string>
    <string name="judgement_date">Judgement Date</string>
    <string name="date_of_judgement">Date of judgement</string>

    <string name="cg_police_contacts">CG Police Contacts</string>
    <string name="notice_to_victim">Notice to Victim</string>
    <string name="writ_cases_alert">Writ Cases Alert</string>
    <string name="case_diary_alert">Case Diary Alert</string>
    <string name="sangyan">SANGYAN</string>
    <string name="mcrc">MCRC</string>
    <string name="cra">CRA</string>
    <string name="notice_date">Notice Date</string>
    <string name="next_hearing_date">Next Hearing Date</string>
    <string name="name_of_the_govt_advocate">Name of the Govt. Advocate</string>
    <string name="police_station_1">Police Station</string>
    <string name="crr">CRR</string>
    <string name="advocate_name">Advocate Name</string>
    <string name="submit_amp_send_alert"><![CDATA[Submit & Send Alert]]></string>
    <string name="all_rights_reserved_by_cg_police">All Rights Reserved by CG-POLICE</string>
    <string name="add_appellant">Add Appellant</string>
    <string name="summary">Summary</string>
    <string name="name_of_respondent">Name of respondent</string>
    <string name="name_of_appellant">Name of appellant</string>
    <string name="districto">District -</string>
    <string name="crime_yearo">Crime Year -</string>
    <string name="notice_dateo">Notice Date -</string>
    <string name="hearing_date">Hearing Date</string>
    <string name="case_yearo">Case Year -</string>
    <string name="advocate_nameo">Advocate Name -</string>
    <string name="next_hearing_dateo">Next Hearing Date -</string>
    <string name="dismissed">Dismissed</string>
    <string name="disposed">Disposed</string>
    <string name="allowed">Allowed</string>
    <string name="tap_to_select_due_date">Tap to Select Due Date</string>
    <string name="due_date">Due Date</string>
    <string name="detailed_summary">Detailed Summary</string>
    <string name="judgement_summary">Judgement Summary</string>
    <string name="due_dateo">Due days -</string>
    <string name="nature_of_the_caseo">Nature of the Case -</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="name_of_the_appellant">Name of the Appellant</string>
    <string name="enter_case_number">Enter Case Number</string>
    <string name="case_number">Case Number</string>
    <string name="upload">Upload</string>
    <string name="appellantsO">Appellants</string>
    <string name="respondentsO">Respondents</string>
    <string name="do_you_want_to_upload_this_file">Do you want to Upload this file?</string>
    <string name="appellants_list">Appellants List</string>
    <string name="respondents_list">Respondents List</string>
    <string name="synopsis_of_the_case">Synopsis of the Case</string>
    <string name="judgement_summary_of_the_case">Judgement Summary of the Case</string>
    <string name="deciding_date">Deciding Date</string>
    <string name="judgement_summary_">Judgement Summary -</string>
    <string name="enter_district">Enter District</string>
    <string name="officer">Officer</string>
    <string name="fetching_data">Fetching data . . .</string>


    <array name="menuOptions">
        <item>Home</item>
        <item>About</item>
        <item>Share</item>
        <item>About Developers</item>
        <item>Privacy policy</item>
        <item>Terms &amp; Conditions</item>
    </array>

</resources>